--- a/Views/Empleados/Edit.cshtml
+++ b/Views/Empleados/Edit.cshtml
@@ -3,11 +3,11 @@
 @{
     ViewData["Title"] = "Edit";
 }
+<div class="card">
+    <div class="card-body">
 
-<h1>Editar</h1>
+<h1 class="card-title">Editar empleado</h1>
 
-<h4>Empleado</h4>
-<hr />
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Edit">
@@ -67,3 +67,5 @@
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 }
+    </div>
+</div>
