--- a/Views/Empleados/Details.cshtml
+++ b/Views/Empleados/Details.cshtml
@@ -4,11 +4,14 @@
     ViewData["Title"] = "Details";
 }
 
-<h1>Detalles</h1>
+<div class="card">
+    <div class="card-body">
+
+<h1 class="card-title">Detalles</h1>
 
 <div>
     <h4>Empleado</h4>
-    <hr />
+
     <dl class="row">
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Nombre)
@@ -61,6 +64,8 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" class="btn btn-outline-success" asp-route-id="@Model?.Id">Editar</a>|
+    <a asp-action="Edit" class="btn btn-outline-success" asp-route-id="@Model?.Id">Editar</a>
     <a asp-action="Index" class="btn btn-outline-info">Cancelar</a>
+</div>
+    </div>
 </div>
