Cards en vistas catalogo restaurante y menú

--- a/Views/Home/CatalogoMenu.cshtml
+++ b/Views/Home/CatalogoMenu.cshtml
@@ -3,10 +3,11 @@
 @{
     ViewData["Title"] = "Menu";
 }
-
-<h1>Menú</h1>
-
-
+<div class="card"> <div class="card-body">
+        <h1 div class="card-title text-center">🦐Menú🦐</h1>
+</div>
+</div>
+<br />
 <div class="row">
     @foreach (var item in Model)
     {
