--- a/Views/Home/CatalogoRestaurante.cshtml
+++ b/Views/Home/CatalogoRestaurante.cshtml
@@ -3,10 +3,12 @@
 @{
     ViewData["Title"] = "Restaurante";
 }
-
-<h1>Restaurante</h1>
-
-
+<div class="card">
+    <div class="card-body">
+        <h1 class="card-title text-center">🍽️ Restaurantes 🍽️</h1>
+    </div>
+</div>
+<br />
 <div class="row">
     @foreach (var item in Model)
     {
