--- a/Views/Home/VerMasR.cshtml
+++ b/Views/Home/VerMasR.cshtml
@@ -3,12 +3,14 @@
 @{
     ViewData["Title"] = "VerMasR";
 }
+<div class="card">
+    <div class="card-body">
 
-<h1>Detalles</h1>
+<h1 class="card-title">Detalles</h1>
 
 <div>
     <h4>Restaurante</h4>
-    <hr />
+    
     <dl class="row">
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Nombre)
@@ -38,4 +40,6 @@
     <a asp-action="Edit" asp-route-id="@Model?.Id"></a>
     <a asp-action="CatalogoRestaurante" class="btn btn-outline-secondary">Regresar</a>
     <a asp-action="CatalogoMenu" class="btn btn-outline-secondary">Ver menu</a>
+</div>
+    </div>
 </div>
