cambio en el catalogo de menu

--- a/Views/Home/CatalogoMenu.cshtml
+++ b/Views/Home/CatalogoMenu.cshtml
@@ -15,7 +15,7 @@
             <div class="card mb-4">
                 <div class="card-body">
                     <img class="rounded mx-auto d-block" src="data:image/jpg;base64,@(Convert.ToBase64String(item.Imagen))" width="95" height="95" />
-                    <h5 class="card-title">@item.Producto @item.Producto</h5>
+                    <h5 class="card-title">@item.Producto</h5>
                     <p class="card-text">
                         <strong>Nota Especial:</strong> @item.NotaEspecial <br />
                         <strong>Precio:</strong> @item.Precio <br />
