--- a/Views/Reservas/Create.cshtml
+++ b/Views/Reservas/Create.cshtml
@@ -3,10 +3,11 @@
 @{
     ViewData["Title"] = "Create";
 }
+<div class="card">
+    <div class="card-body">
 
-<h1 >Crear Reservas</h1>
+<h1 class="card-title">Crear Reservación</h1>
 
-<hr />
 <div class="container">
     <form asp-action="Create">
         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
@@ -44,10 +45,9 @@
             </div>
         </div>
 
-        <div class="d-flex justify-content-end">
-            <button type="submit" class="btn btn-outline-dark">Crear</button>
-            <div style="width: 15px"></div>
-            <a asp-action="Index" class="btn btn-secondary">Cancelar</a>
+        <div>
+            <button type="submit" class="btn btn-secondary">Crear</button>
+            <a asp-action="Index" class="btn btn-danger">Cancelar</a>
         </div>
 
 
@@ -59,3 +59,5 @@
         await Html.RenderPartialAsync("_ValidationScriptsPartial");
     }
 }
+    </div>
+</div>
