--- a/Views/Reservas/Details.cshtml
+++ b/Views/Reservas/Details.cshtml
@@ -3,13 +3,10 @@
 @{
     ViewData["Title"] = "Details";
 }
+<div class="card">
+<div class="card-body">
+<h1 class="card-title">Detalle de Reserva</h1>
 
-<h1>Detalle de Reserva</h1>
-
-<div class="container">
-    <div class="card border-secundary mb-3">
-        <div class="card-body"><h4>Información de la Reserva</h4></div>
-        <div class="card-body">
             <dl class="row">
                 <dt class="col-md-4">
                     @Html.DisplayNameFor(model => model.ClienteId)
@@ -48,18 +45,19 @@
                     @Html.DisplayFor(model => model.FechaFin)
                 </dd>
             </dl>
-        </div>
+       
+    
+
+    <div>
+        <a asp-action="Edit" asp-route-id="@Model?.Id" class="btn btn-secondary">Editar</a>
+        <a asp-action="Index" class="btn btn-danger">Cancelar</a>
     </div>
 
-    <div class="d-flex justify-content-end">
-        <a asp-action="Edit" asp-route-id="@Model?.Id" class="btn btn-outline-dark">Editar</a>
-        <div style="width: 15px"></div>
-        <a asp-action="Index" class="btn btn-outline-secondary">Cancelar</a>
-    </div>
-</div>
 
 @section Scripts {
     @{
         await Html.RenderPartialAsync("_ValidationScriptsPartial");
     }
-}
+    }
+</div>
+</div>
