--- a/Views/Reservas/Edit.cshtml
+++ b/Views/Reservas/Edit.cshtml
@@ -1,13 +1,12 @@
 ﻿@model T_Reservation.Models.Reserva
 
 @{
-    ViewData["Title"] = "Edit";
+    ViewData["Title"] = "Editar";
 }
+<div class="card"> <div class="card-body">
+<h1 class="card-title">Editar Reserva</h1>
 
-<h1>Editar Reservas</h1>
 
-<hr />
-<div class="container">
     <form asp-action="Edit">
         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
         <input type="hidden" asp-for="Id" />
@@ -48,16 +47,17 @@
             </div>
         </div>
 
-        <div class="d-flex justify-content-end">
-            <button type="submit" class="btn btn-outline-dark">Guardar</button>
-            <div style="width: 15px"></div>
-            <a asp-action="Index" class="btn btn-secondary ml-3">Cancelar</a>
+        <div>
+            <button type="submit" class="btn btn-dark">Guardar</button>
+            <a asp-action="Index" class="btn btn-danger">Cancelar</a>
         </div>
     </form>
-</div>
+
 
 @section Scripts {
     @{
         await Html.RenderPartialAsync("_ValidationScriptsPartial");
     }
 }
+    </div>
+</div>
