--- a/Views/Home/CatalogoMenu.cshtml
+++ b/Views/Home/CatalogoMenu.cshtml
@@ -14,16 +14,16 @@
         <div class="col-md-4">
             <div class="card mb-4">
                 <div class="card-body">
-                    <img class="rounded mx-auto d-block" src="data:image/jpg;base64,@(Convert.ToBase64String(item.Imagen))" width="95" height="95" />
-                    <h5 class="card-title">@item.Producto</h5>
-                    <p class="card-text">
+                    <img class="rounded mx-auto d-block" src="data:image/jpg;base64,@(Convert.ToBase64String(item.Imagen))" width="200" height="200" />
+                    <h5 class="text-center">@item.Producto</h5>
+                    <p class="text-center">
                         <strong>Nota Especial:</strong> @item.NotaEspecial <br />
                         <strong>Precio:</strong> @item.Precio <br />
 
                     </p>
-                    <div class="text-right">
+                    <div class="d-flex justify-content-center">
                        
-                        <a href="@Url.Action("VerMas", new { id = item.Id })" class="btn btn-outline-dark">Ver más</a>
+                        <a href="@Url.Action("VerMas", new { id = item.Id })" class="btn btn-dark">Ver más</a>
                     </div>
                 </div>
             </div>
