--- a/Views/Empleados/Details.cshtml
+++ b/Views/Empleados/Details.cshtml
@@ -64,7 +64,7 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" class="btn btn-outline-success" asp-route-id="@Model?.Id">Editar</a>
+    <a asp-action="Edit" class="btn btn-outline-success" asp-route-id="@Model?.Id">Editar</a> |
     <a asp-action="Index" class="btn btn-outline-info">Cancelar</a>
 </div>
     </div>
