arreglos en el catalogo de menu

--- a/Views/Home/CatalogoMenu.cshtml
+++ b/Views/Home/CatalogoMenu.cshtml
@@ -25,9 +25,15 @@
                        
                         <a href="@Url.Action("VerMas", new { id = item.Id })" class="btn btn-dark">Ver más</a>
                     </div>
+                  
                 </div>
             </div>
         </div>
     }
+</div>
+
+<div>
+    <a asp-action="CatalogoRestaurante" class="btn btn-secondary">Regresar</a>
+
 </div>
 
