--- a/Views/Menus/Create.cshtml
+++ b/Views/Menus/Create.cshtml
@@ -4,10 +4,9 @@
     ViewData["Title"] = "Create";
 }
 
-<h1>Crear</h1>
-
-<h4>Menú</h4>
-<hr />
+<div class="card">
+    <div class="card-body">
+<h1 class="card-title">Crear producto</h1>
 
         <form asp-action="Create" enctype="multipart/form-data" class="row g-3">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
@@ -48,8 +47,8 @@
             </div>
             <br />
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-outline-dark" />
-                <a asp-action="Index" class="btn btn-outline-secondary">Cancelar</a>
+                <input type="submit" value="Crear" class="btn btn-dark" />
+                <a asp-action="Index" class="btn btn-danger">Cancelar</a>
             </div>
         </form>
 
@@ -72,3 +71,5 @@
         }
     </script>
 }
+    </div>
+</div>
