Ajustes en vistas de Clientes.

--- a/Views/Clientes/Index.cshtml
+++ b/Views/Clientes/Index.cshtml
@@ -69,8 +69,8 @@
             <td>
                 @Html.DisplayFor(modelItem => item.Restaurante.Nombre)
             </td>
-            <td>
-                        <a class="mb3 btn btn-secondary" asp-action="Edit" asp-route-id="@item.Id">Editar</a>
+             <td class="btn-group-vertical" >
+                        <a class="mb3 btn btn-dark" asp-action="Edit" asp-route-id="@item.Id">Editar</a>
                         <a class="mb3 btn btn-secondary" asp-action="Details" asp-route-id="@item.Id">Detalle</a>
                         <a class="mb3 btn btn-danger" asp-action="Delete" asp-route-id="@item.Id">Eliminar</a>
             </td>
