--- a/Views/Clientes/Delete.cshtml
+++ b/Views/Clientes/Delete.cshtml
@@ -57,13 +57,13 @@
             @Html.DisplayNameFor(model => model.Restaurante)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Restaurante.Descripcion)
+            @Html.DisplayFor(model => model.Restaurante.Nombre)
         </dd>
     </dl>
     
     <form asp-action="Delete">
         <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Eliminar" class="btn btn-danger" /> 
+        <input type="submit" value="Eliminar" class="btn btn-danger" /> |
         <a class="btn btn-secondary" asp-action="Index">Cancelar</a>
     </form>
 </div>
