--- a/Views/Clientes/Edit.cshtml
+++ b/Views/Clientes/Edit.cshtml
@@ -12,32 +12,32 @@
         <form asp-action="Edit" class="row g-3">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Id" />
-            <div class="col-md-7">
+            <div class="col-md-6">
                 <label asp-for="Nombre" class="control-label"></label>
                 <input asp-for="Nombre" class="form-control" />
                 <span asp-validation-for="Nombre" class="text-danger"></span>
             </div>
-            <div class="col-md-5">
+            <div class="col-md-6">
                 <label asp-for="Dui" class="control-label"></label>
                 <input asp-for="Dui" class="form-control" />
                 <span asp-validation-for="Dui" class="text-danger"></span>
             </div>
-            <div class="col-md-4">
+            <div class="col-md-5">
                 <label asp-for="Telefono" class="control-label"></label>
                 <input asp-for="Telefono" class="form-control" />
                 <span asp-validation-for="Telefono" class="text-danger"></span>
             </div>
-            <div class="col-md-8">
+            <div class="col-md-7">
                 <label asp-for="Correo" class="control-label"></label>
                 <input asp-for="Correo" class="form-control" />
                 <span asp-validation-for="Correo" class="text-danger"></span>
             </div>
-            <div class="col-md-7">
+            <div class="col-md-6">
                 <label asp-for="Direccion" class="control-label"></label>
                 <input asp-for="Direccion" class="form-control" />
                 <span asp-validation-for="Direccion" class="text-danger"></span>
             </div>
-            <div class="col-md-5">
+            <div class="col-md-6">
                 <label asp-for="FechaNacimiento" class="control-label"></label>
                 <input asp-for="FechaNacimiento" class="form-control" />
                 <span asp-validation-for="FechaNacimiento" class="text-danger"></span>
@@ -53,7 +53,7 @@
                 <span asp-validation-for="RestauranteId" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Guardar" class="btn btn-secondary" />
+                <input type="submit" value="Guardar" class="btn btn-secondary" /> |
                 <a class="btn btn-danger" asp-action="Index">Cancelar</a>
             </div>
         </form>
