--- a/Views/Menus/Delete.cshtml
+++ b/Views/Menus/Delete.cshtml
@@ -49,7 +49,7 @@
             @Html.DisplayNameFor(model => model.Restaurante)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Restaurante.Descripcion)
+            @Html.DisplayFor(model => model.Restaurante.Nombre)
         </dd>
     </dl>
     
