--- a/Views/Menus/Details.cshtml
+++ b/Views/Menus/Details.cshtml
@@ -48,7 +48,7 @@
             @Html.DisplayNameFor(model => model.Restaurante)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Restaurante.Descripcion)
+            @Html.DisplayFor(model => model.Restaurante.Nombre)
         </dd>
     </dl>
 
