--- a/Views/Menus/Index.cshtml
+++ b/Views/Menus/Index.cshtml
@@ -59,12 +59,13 @@
                 <td>
                     @Html.DisplayFor(modelItem => item.Restaurante.Nombre)
                 </td>
-                <td>
+                 <td class="btn-group-vertical">
                     <a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-dark" >Editar</a>
+                    <a asp-action="DeleteImagen" asp-route-id="@item.Id" class="btn btn-danger">Eliminar Imagen</a>
                     <a asp-action="Details" asp-route-id="@item.Id" class="btn btn-secondary">Detalles</a>
                     <a asp-action="Delete" asp-route-id="@item.Id" class="btn btn-danger">Eliminar</a>
-                    <a></a>
-                    <a asp-action="DeleteImagen" asp-route-id="@item.Id" class="btn btn-danger">Eliminar Imagen</a>
+                  
+                   
                 </td>
         </tr>
 
