--- a/Views/Mesas/Create.cshtml
+++ b/Views/Mesas/Create.cshtml
@@ -36,7 +36,7 @@
                 <select asp-for="RestauranteId" class ="form-control" asp-items="ViewBag.RestauranteId"></select>
             </div>
             <div class="form-group">
-                <input class="btn btn-secondary" type="submit" value="Crear" />
+                <input class="btn btn-secondary" type="submit" value="Crear" /> |
                 <a class="btn btn-danger" asp-action="Index">Cancelar</a>
             </div>
         </form>
