--- a/Views/Mesas/Edit.cshtml
+++ b/Views/Mesas/Edit.cshtml
@@ -37,7 +37,7 @@
                 <span asp-validation-for="RestauranteId" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input class="btn btn-secondary" type="submit" value="Guardar" />
+                <input class="btn btn-secondary" type="submit" value="Guardar" /> |
                 <a class="btn btn-danger" asp-action="Index">Cancelar</a>
             </div>
         </form>
