Ajustes en diseño y correcion de campo en Vistas de Reservas y Mesas.

--- a/Views/Reservas/Delete.cshtml
+++ b/Views/Reservas/Delete.cshtml
@@ -24,7 +24,7 @@
                     @Html.DisplayNameFor(model => model.Restaurante)
                 </dt>
                 <dd class="col-md-8">
-                    @Html.DisplayFor(model => model.Restaurante.Descripcion)
+                    @Html.DisplayFor(model => model.Restaurante.Nombre)
                 </dd>
                 <dt class="col-md-4">
                     @Html.DisplayNameFor(model => model.Mesa)
