--- a/Views/Mesas/Index.cshtml
+++ b/Views/Mesas/Index.cshtml
@@ -52,7 +52,7 @@
                 @Html.DisplayFor(modelItem => item.Restaurante.Nombre)
             </td>
             <td class="btn-group-vertical">
-                        <a class="mb3 btn btn-secondary" asp-action="Edit" asp-route-id="@item.Id">Editar</a>
+                        <a class="mb3 btn btn-dark" asp-action="Edit" asp-route-id="@item.Id">Editar</a>
                         <a class="mb3 btn btn-secondary" asp-action="Details" asp-route-id="@item.Id">Detalles</a>
                         <a class="mb3 btn btn-danger" asp-action="Delete" asp-route-id="@item.Id">Eliminar</a>
             </td>
