--- a/Views/Reservas/Details.cshtml
+++ b/Views/Reservas/Details.cshtml
@@ -18,7 +18,7 @@
                     @Html.DisplayNameFor(model => model.RestauranteId)
                 </dt>
                 <dd class="col-md-8">
-                    @Html.DisplayFor(model => model.Restaurante.Descripcion)
+                    @Html.DisplayFor(model => model.Restaurante.Nombre)
                 </dd>
                 <dt class="col-md-4">
                     @Html.DisplayNameFor(model => model.MesaId)
