cambios en las vistas y los contoladores

--- a/Views/Restaurantes/Delete.cshtml
+++ b/Views/Restaurantes/Delete.cshtml
@@ -3,10 +3,12 @@
 @{
     ViewData["Title"] = "Delete";
 }
+<div class="card">
+    <div class="card-body">
 
-<h1>Eliminar</h1>
+<h1 class="card-title">Eliminar</h1>
 
-<h3>¿Estas seguro que quieres eliminar este restaurante?</h3>
+        <h3 class="text-danger">¿Estas seguro que quieres eliminar este restaurante?</h3>
 <div>
     <hr />
     <dl class="row">
@@ -47,8 +49,10 @@
     
     <form asp-action="Delete">
         <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Eliminar" class="btn btn-outline-danger" /> |
-     <a asp-action="Index" class="btn btn-outline-dark">Cancelar</a>
+        <input type="submit" value="Eliminar" class="btn btn-danger" /> |
+     <a asp-action="Index" class="btn btn-dark">Cancelar</a>
         
     </form>
+</div>
+</div>
 </div>
