--- a/Views/Restaurantes/Create.cshtml
+++ b/Views/Restaurantes/Create.cshtml
@@ -4,14 +4,17 @@
     ViewData["Title"] = "Create";
 }
 
-<h1>Crear</h1>
-
-<h4>Restaurante</h4>
+<div class="card">
+    <div class="card-body">
+<h4 class="card-title">Crear Restaurante</h4>
 <hr />
-<div class="row">
-    <div class="col-md-4">
+<div class="container">
+  <div>
         <form asp-action="Create" enctype="multipart/form-data" class="row g-3">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+
+            <div class="row mb-3"> </div>
+                <div class="col-md-4">  </div>
             <div class="form-group">
                 <label asp-for="Nombre" class="control-label"></label>
                 <input asp-for="Nombre" class="form-control" />
@@ -40,8 +43,8 @@
                 <select asp-for="EmpleadoId" class ="form-control" asp-items="ViewBag.EmpleadoId"></select>
             </div>
             <div class="form-group">
-            <input type="submit" value="Crear" class="btn btn-outline-info" />
-            <a asp-action="Index" class="btn btn-outline-dark">cancelar</a>
+            <input type="submit" value="Crear" class="btn btn-dark" />
+            <a asp-action="Index" class="btn btn-danger">cancelar</a>
             </div>
         </form>
     </div>
@@ -66,3 +69,5 @@
         }
     </script>
 }
+</div>
+</div>
