--- a/Views/Restaurantes/Details.cshtml
+++ b/Views/Restaurantes/Details.cshtml
@@ -4,7 +4,9 @@
     ViewData["Title"] = "Details";
 }
 
-<h1>Detalles</h1>
+<div class="card">
+    <div class="card-body">
+        <h1 class="card-title">Detalles</h1>
 
 <div>
     <h4>Restaurante</h4>
@@ -46,6 +48,8 @@
     </dl>
 </div>
 <div>
-  <a asp-action="Edit" class="btn btn-outline-success" asp-route-id="@Model?.Id">Editar</a> |
- <a asp-action="Index" class="btn btn-outline-dark">Cancelar</a>
+  <a asp-action="Edit" class="btn btn-secondary" asp-route-id="@Model?.Id">Editar</a> |
+ <a asp-action="Index" class="btn btn-danger">Cancelar</a>
+</div>
+</div>
 </div>
