--- a/Views/Restaurantes/Edit.cshtml
+++ b/Views/Restaurantes/Edit.cshtml
@@ -4,7 +4,9 @@
     ViewData["Title"] = "Edit";
 }
 
-<h1>Editar</h1>
+<div class="card">
+    <div class="card-body">
+        <h1 class="card-title">Editar</h1>
 
 <h4>Restaurante</h4>
 <hr />
@@ -53,8 +55,8 @@
                 <span asp-validation-for="EmpleadoId" class="text-danger"></span>
             </div>
             <div class="form-group">
-              <input type="submit" value="Crear" class="btn btn-outline-info" />
-                <a asp-action="Index" class="btn btn-outline-dark">cancelar</a>
+              <input type="submit" value="Crear" class="btn btn-secondary" />
+                <a asp-action="Index" class="btn btn-dark">cancelar</a>
 
             </div>
         </form>
@@ -77,3 +79,5 @@
         }
     </script>
 }
+</div>
+</div>
