--- a/Views/Restaurantes/Index.cshtml
+++ b/Views/Restaurantes/Index.cshtml
@@ -54,11 +54,12 @@
             <td>
                 @Html.DisplayFor(modelItem => item.Empleados.Nombre)
             </td>
-            <td>
-                  <a asp-action="Edit" class="mb3 btn btn-secondary" asp-route-id="@item.Id">Editar</a>
-                  <a asp-action="Details" class="mb3 btn btn-secondary" asp-route-id="@item.Id">Detalles</a> 
-                 <a asp-action="Delete" class="mb3 btn btn-danger" asp-route-id="@item.Id">Eliminar</a>
-            </td>
+                        <td class="btn-group-vertical">
+        <a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-dark">Editar</a>
+      <a asp-action="DeleteImagen" asp-route-id="@item.Id" class="btn btn-danger">Eliminar Imagen</a>
+        <a asp-action="Details" asp-route-id="@item.Id" class="btn btn-secondary">Detalles</a>
+           <a asp-action="Delete" asp-route-id="@item.Id" class="btn btn-danger">Eliminar</a>         
+           </td>
         </tr>
 }
     </tbody>
