--- a/Views/Restaurantes/Create.cshtml
+++ b/Views/Restaurantes/Create.cshtml
@@ -9,13 +9,11 @@
 <h4 class="card-title">Crear Restaurante</h4>
 <hr />
 <div class="container">
-  <div>
+  <div class="col-md-12">
         <form asp-action="Create" enctype="multipart/form-data" class="row g-3">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 
-            <div class="row mb-3"> </div>
-                <div class="col-md-4">  </div>
-            <div class="form-group">
+            <div class="form-group col-md-6">
                 <label asp-for="Nombre" class="control-label"></label>
                 <input asp-for="Nombre" class="form-control" />
                 <span asp-validation-for="Nombre" class="text-danger"></span>
@@ -28,22 +26,22 @@
             <div class="form-group col-7">
                 <img id="imagenPrevia" src="~/img/default.jpg" alt="Vista previa de la imagen" style="max-width: 220px; max-height: 220px;">
             </div>
-            <div class="form-group">
+            <div class="form-group col-md-6">
                 <label asp-for="Descripcion" class="control-label"></label>
                 <input asp-for="Descripcion" class="form-control" />
                 <span asp-validation-for="Descripcion" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            <div class="form-group col-md-6">
                 <label asp-for="Direccion" class="control-label"></label>
                 <input asp-for="Direccion" class="form-control" />
                 <span asp-validation-for="Direccion" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="EmpleadoId" class="control-label"></label>
+                <label asp-for="EmpleadoId" class="control-label">Empleado</label>
                 <select asp-for="EmpleadoId" class ="form-control" asp-items="ViewBag.EmpleadoId"></select>
             </div>
             <div class="form-group">
-            <input type="submit" value="Crear" class="btn btn-dark" />
+            <input type="submit" value="Crear" class="btn btn-dark" /> |
             <a asp-action="Index" class="btn btn-danger">cancelar</a>
             </div>
         </form>
