--- a/Views/Restaurantes/Details.cshtml
+++ b/Views/Restaurantes/Details.cshtml
@@ -43,7 +43,7 @@
             @Html.DisplayNameFor(model => model.Empleados)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Empleados.Correo)
+            @Html.DisplayFor(model => model.Empleados.Nombre)
         </dd>
     </dl>
 </div>
