--- a/Views/Home/CatalogoMenu.cshtml
+++ b/Views/Home/CatalogoMenu.cshtml
@@ -14,7 +14,7 @@
         <div class="col-md-4">
             <div class="card mb-4">
                 <div class="card-body">
-                   
+                    <img class="rounded mx-auto d-block" src="data:image/jpg;base64,@(Convert.ToBase64String(item.Imagen))" width="200" height="200" />
                     <h5 class="text-center">@item.Producto</h5>
                     <p class="text-center">
                         <strong>Nota Especial:</strong> @item.NotaEspecial <br />
