--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -26,7 +26,7 @@
                             <a class="nav-link text-white" asp-area="" asp-controller="Empleados" asp-action="Index">Empleados</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-white" asp-area="" asp-controller="Home" asp-action="CatalogoMenu">Catalogo de Menú</a>
+                            <a class="nav-link text-white" asp-area="" asp-controller="Home" asp-action="CatalogoMenu">Catálogo de Menú</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-white" asp-area="" asp-controller="Menus" asp-action="Index">Menú</a>
@@ -38,7 +38,7 @@
                             <a class="nav-link text-white" asp-area="" asp-controller="Reservas" asp-action="Index">Reservaciones</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-white" asp-area="" asp-controller="Home" asp-action="CatalogoRestaurante">Catalogo Restaurante</a>
+                            <a class="nav-link text-white" asp-area="" asp-controller="Home" asp-action="CatalogoRestaurante">Catálogo Restaurante</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-white" asp-area="" asp-controller="Restaurantes" asp-action="Index">Restaurantes</a>
