--- a/Views/Mesas/Index.cshtml
+++ b/Views/Mesas/Index.cshtml
@@ -1,7 +1,9 @@
 ﻿@model IEnumerable<T_Reservation.Models.Mesa>
+@using T_Reservation.Controllers
 
 @{
     ViewData["Title"] = "Mesas";
+    Layout = "~/Views/Shared/_LayoutEmpleado.cshtml";
 }
 
 <div class="card">
