--- a/Views/Menus/Index.cshtml
+++ b/Views/Menus/Index.cshtml
@@ -2,6 +2,9 @@
 
 @{
     ViewData["Title"] = "Index";
+    Layout = "~/Views/Shared/_LayoutEmpleado.cshtml";
+
+
 }
 <div class="card">
     <div class="card-body">
