--- a/Views/Reservas/Index.cshtml
+++ b/Views/Reservas/Index.cshtml
@@ -2,6 +2,7 @@
 
 @{
     ViewData["Title"] = "Index";
+    Layout = "~/Views/Shared/_LayoutCliente.cshtml";
 }
 <div class="card">
     <div class="card-body">
