--- a/Views/Home/VerMasR.cshtml
+++ b/Views/Home/VerMasR.cshtml
@@ -40,6 +40,7 @@
     <a asp-action="Edit" asp-route-id="@Model?.Id"></a>
     <a asp-action="CatalogoRestaurante" class="btn btn-outline-secondary">Regresar</a>
     <a asp-action="CatalogoMenu" class="btn btn-outline-secondary">Ver menu</a>
+            <a asp-controller="Reservas" asp-action="Create" class="btn btn-outline-secondary">realizar reserva</a>
 </div>
     </div>
 </div>
