--- a/Views/Home/IndexHome.cshtml
+++ b/Views/Home/IndexHome.cshtml
@@ -2,23 +2,25 @@
 	ViewBag.Title = "IndexHome";
 	Layout = "~/Views/Shared/_LayoutLogin.cshtml";
 }
+<div class="card  text-center" >
+	<h1 class="card-footer"  style="background-color:lavenderblush" >Bienvenidos a T-Reservation</h1>
+	<div class="card-body">
+		
 
-
-
-<h1>Bienvenidos a T-Reservation</h1>
-
-<h2>Crea Una Cuenta Para Registrar un Restaurante</h2>
+<h5>Crea Una Cuenta Para Registrar un Restaurante</h5>
 <div>
-	<a asp-area="" asp-controller="Empleados" asp-action="create">Registrarse</a>
+	<a asp-area="" class="btn btn-dark" asp-controller="Empleados" asp-action="create">Registrarse</a>
 </div>
 
 
-	<h2>Crea Una Cuenta Para Registrarte Como Usuario</h2>
+	<h5>Crea Una Cuenta Para Registrarte Como Usuario</h5>
 	<div>
-	<a asp-area="" asp-controller="Clientes" asp-action="create">Registrarse</a>
+	<a asp-area="" class="btn btn-dark" asp-controller="Clientes" asp-action="create">Registrarse</a>
 	</div>
 
-	<h2>Inicia Sesion</h2>
+	<h5>Inicia Sesion</h5>
 <div>
-	<a asp-area="" asp-controller="Login" asp-action="Index">Iniciar Sesion</a>
+	<a asp-area="" class="btn btn-dark" asp-controller="Login" asp-action="Index">Iniciar Sesion</a>
+</div>
+</div>
 </div>
