--- a/Views/Login/Index.cshtml
+++ b/Views/Login/Index.cshtml
@@ -27,7 +27,7 @@
     </div>
 
     <button type="submit" class="btn btn-primary">Iniciar Sesión</button>
-    <p>¿No tienes una cuenta? <a href="@Url.Action("Registrar","Accesos")">Regístrate</a></p>
+    <p>¿No tienes una cuenta? <a href="@Url.Action("IndexHome","Home")">Regístrate</a></p>
 
 }
 
