--- a/Views/Shared/_LayoutLogin.cshtml
+++ b/Views/Shared/_LayoutLogin.cshtml
@@ -18,8 +18,10 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
-                    <h1>¡¡ Bienvenidos !!</h1>
                        
+                    <li class="nav">
+                        <a class="nav-link text-white" asp-area="" asp-controller="Home" asp-action="IndexHome">Registrarse</a>
+                    </li>
                 </div>
             </div>
         </nav>
