--- a/Views/Clientes/Create.cshtml
+++ b/Views/Clientes/Create.cshtml
@@ -3,6 +3,13 @@
 @{
     ViewData["Title"] = "Registrar Cliente";
 }
+
+@{
+    var httpContext = ViewContext.HttpContext;
+    var usuarioRol = httpContext.Session.GetString("UsuarioRol");
+
+}
+
 <div class="card">
     <div class="card-body">
 
@@ -47,13 +54,14 @@
                 <input asp-for="Passaword" class="form-control" />
                 <span asp-validation-for="Passaword" class="text-danger"></span>
             </div>
-            <div class="form-group col-md-7">
-                <label asp-for="RestauranteId" class="control-label"></label>
-                <select asp-for="RestauranteId" class ="form-control" asp-items="ViewBag.RestauranteId"></select>
-            </div>
             <div class="form-group">
-                <input type="submit" value="Crear" class="btn btn-secondary" /> |
+                
+                <input type="submit" value="Crear" class="btn btn-secondary" />
+                        @if (usuarioRol == "Administrador" || usuarioRol == "Cliente" || usuarioRol == "Empleado")
+
+                        {
                         <a asp-action="Index" class="btn btn-danger">Cancelar</a>
+                                    }
             </div>
         </form>
     </div>
