--- a/Views/Empleados/Create.cshtml
+++ b/Views/Empleados/Create.cshtml
@@ -44,8 +44,8 @@
             </div>
             <div class="form-group col-md-7">
                 <label asp-for="Rol" class="control-label"></label>
-                <input asp-for="Rol" class="form-control" />
-                <span asp-validation-for="Rol" class="text-danger"></span>
+                        @Html.DropDownList("Rol", new SelectList(new[] { "Empleado"}))
+                        <span asp-validation-for="Rol" class="text-danger"></span>
             </div>
             <div class="form-group col-md-5">
                 <label asp-for="Password" class="control-label">Contraseña</label>
