--- a/Views/Empleados/Index.cshtml
+++ b/Views/Empleados/Index.cshtml
@@ -37,7 +37,6 @@
             <th>
                 @Html.DisplayNameFor(model => model.Password)
             </th>
-            <th></th>
         </tr>
     </thead>
     <tbody>
@@ -67,10 +66,14 @@
             <td>
                 @Html.DisplayFor(modelItem => item.Password)
             </td>
+                     
                     <td class="btn-group-vertical">
                     <a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-dark">Editar</a> 
-                    <a asp-action="Details" asp-route-id="@item.Id" class="btn btn-secondary">Detalles</a> 
+                    <a asp-action="Details" asp-route-id="@item.Id" class="btn btn-secondary">Detalles</a>
+                            @if (User.IsInRole("Administrador"))
+                            {
                     <a asp-action="Delete" asp-route-id="@item.Id" class="btn btn-danger">Eliminar</a>
+                            }
             </td>
         </tr>
 }
