--- a/Views/Reservas/Index.cshtml
+++ b/Views/Reservas/Index.cshtml
@@ -2,15 +2,26 @@
 
 @{
     ViewData["Title"] = "Index";
-    Layout = "~/Views/Shared/_LayoutCliente.cshtml";
 }
+
+@{
+    var httpContext = ViewContext.HttpContext;
+    var usuarioRol = httpContext.Session.GetString("UsuarioRol");
+   
+}
+
+
 <div class="card">
     <div class="card-body">
         <h1 class="card-title">Reservaciones</h1>
 
 <p>
-    <a asp-action="Create" class="btn btn-secondary">Nueva Reserva</a>
-</p>
+            @if (usuarioRol == "Administrador" || usuarioRol == "Cliente")
+
+            {
+                <a asp-action="Create" class="btn btn-secondary">Nueva Reserva</a>
+            }
+        </p>
         <div class="table-responsive">
             <table class="table table-bordered table-sm">
     <thead>
@@ -40,6 +51,7 @@
 @foreach (var item in Model) {
         <tr>
             <td>
+
                 @Html.DisplayFor(modelItem => item.Cliente.Correo)
             </td>
             <td>
@@ -58,9 +70,21 @@
                 @Html.DisplayFor(modelItem => item.FechaFin)
             </td>
             <td class="btn-group-vertical">
+                                @if (usuarioRol == "Administrador" || usuarioRol == "Cliente")
+
+                                {
                     <a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-dark">Editar</a>
+                                }
+                                @if (usuarioRol == "Administrador" || usuarioRol == "Cliente" || usuarioRol == "Empleado")
+
+                                    {
                     <a asp-action="Details" asp-route-id="@item.Id" class="btn btn-secondary">Detalles</a>
+                                    }
+                                @if (usuarioRol == "Administrador" || usuarioRol == "Cliente" )
+
+                                        {
                     <a asp-action="Delete" asp-route-id="@item.Id" class="btn btn-danger">Eliminar</a>
+                                        }
             </td>
         </tr>
 }
