--- a/Views/Restaurantes/Index.cshtml
+++ b/Views/Restaurantes/Index.cshtml
@@ -1,15 +1,28 @@
 ﻿@model IEnumerable<T_Reservation.Models.Restaurante>
+@using Microsoft.AspNetCore.Http
+@inject IHttpContextAccessor HttpContextAccessor
 
 @{
     ViewData["Title"] = "Index";
-    Layout = "~/Views/Shared/_LayoutEmpleado.cshtml";
 }
+
+@{
+    var httpContext = ViewContext.HttpContext;
+    var usuarioRol = httpContext.Session.GetString("UsuarioRol");
+    int? usuarioId = HttpContextAccessor.HttpContext.Session.GetInt32("UsuarioId");
+}
+
+
 <div class="card">
     <div class="card-body">
 <h1 class="card-title">Restaurante</h1>
 
 <p>
+    @if (usuarioRol == "Administrador" || usuarioRol == "Empleado")
+                            
+                            {
     <a asp-action="Create" class="btn btn-secondary">Agregar nuevo restaurante</a>
+                            }
 </p>
      
 <table class="table table-bordered table-sm">
@@ -56,10 +69,21 @@
                 @Html.DisplayFor(modelItem => item.Empleados.Nombre)
             </td>
                         <td class="btn-group-vertical">
-        <a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-dark">Editar</a>
 
+                            @if (usuarioId.HasValue && item.EmpleadoId == usuarioId.Value || usuarioRol == "Administrador")
+                                {
+        <a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-dark">Editar</a>
+                                }
+
+                            @if (usuarioId.HasValue && item.EmpleadoId == usuarioId.Value || usuarioRol == "Administrador")
+                            {
         <a asp-action="Details" asp-route-id="@item.Id" class="btn btn-secondary">Detalles</a>
-           <a asp-action="Delete" asp-route-id="@item.Id" class="btn btn-danger">Eliminar</a>         
+                            }
+                            @if (usuarioId.HasValue && item.EmpleadoId == usuarioId.Value || usuarioRol == "Administrador")
+                            
+                            {
+           <a asp-action="Delete" asp-route-id="@item.Id" class="btn btn-danger">Eliminar</a>     
+                            }
            </td>
         </tr>
 }
