Arreglando Errores De Pasword

--- a/Views/Clientes/Index.cshtml
+++ b/Views/Clientes/Index.cshtml
@@ -60,8 +60,9 @@
             <td>
                 @Html.DisplayFor(modelItem => item.FechaNacimiento)
             </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Passaword)
+                            <td colspan="8" class="text-center">
+                           *********
+
             </td>
              <td class="btn-group-vertical" >
                         <a class="mb3 btn btn-dark" asp-action="Edit" asp-route-id="@item.Id">Editar</a>
