--- a/Views/Empleados/Index.cshtml
+++ b/Views/Empleados/Index.cshtml
@@ -63,8 +63,8 @@
             <td>
                 @Html.DisplayFor(modelItem => item.Rol)
             </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Password)
+                        <td colspan="8" class="text-center">
+                ************
             </td>
                      
                     <td class="btn-group-vertical">
