--- a/Views/Empleados/Create.cshtml
+++ b/Views/Empleados/Create.cshtml
@@ -54,7 +54,7 @@
             </div>
             <div class="form-group">
                 <input type="submit" value="Crear nuevo empleado" class="btn btn-dark" />
-
+                        <a asp-area="" class="btn btn-secondary" asp-controller="Home" asp-action="IndexHome">Cancelar</a>
             </div>
         </form>
     </div>
