--- a/Views/Clientes/Edit.cshtml
+++ b/Views/Clientes/Edit.cshtml
@@ -43,9 +43,9 @@
                 <span asp-validation-for="FechaNacimiento" class="text-danger"></span>
             </div>
                     <div class="col-md-6">
-                        <label asp-for="Passaword" class="control-label"></label>
-                        <input asp-for="Passaword" class="form-control" />
-                        <span asp-validation-for="Passaword" class="text-danger"></span>
+                        
+                        <input type="hidden" asp-for="Passaword" class="form-control" />
+                        <span type="hidden" asp-validation-for="Passaword" class="text-danger"></span>
                     </div>
             <div class="form-group">
                 <input type="submit" value="Guardar" class="btn btn-secondary" /> |
